crates/compiler/src/tests/e2e/bad/0056_default_operator_wrong_return_type/main.gom
trait Default {
    fn default() -> Self;
}

struct MyVal { n: int32 }
impl Default for MyVal {
    fn default() -> MyVal { MyVal { n: 0 } }
}

fn main() {
    let v: MyVal = Default::default();
    println(v.n.to_string());
}
